# pytorch

./: .gitignore  Dockerfile  issue.md  onnx_session_init_research_report.md
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
aten/src/ATen/native/cuda/: Copy.cu
aten/src/ATen/native/transformers/cuda/: attention.cu  attention_backward.cu
c10/cuda/: CUDAFunctions.h
test/: test_nn.py  test_transformers.py
test/export/: test_serialize.py
testingptx/: triton_gputarget_override.md
tocuda/: CMakeLists.txt  main.cpp  notes.md  performance.py
torch/_C/: __init__.pyi.in
torch/_export/serde/: schema_check.py  serialize.py
torch/_inductor/: autotune_process.py  codecache.py  select_algorithm.py
torch/_inductor/codegen/cuda/: cuda_env.py
torch/_inductor/runtime/: triton_heuristics.py
torch/csrc/export/: pybind.cpp
torch/csrc/jit/python/: init.cpp
torch/export/pt2_archive/: _package.py
torch/fx/experimental/: symbolic_shapes.py
torch/nn/: functional.py
tutils/: CLAUDE.md  DOCKER_README.md  Dockerfile  benchmark_inference_performance.py  benchmark_phi3_inference.py  check_environment.py  docker-compose.yml  investigation_plan.md  onnx_session_diagnostics.py  onnx_solutions.py  run_docker.sh  test_gil_detection.py  test_parallel_init.py  test_phi3_parallel.py
